examples/test/testpolicy11892.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11892
  namespace: namespace127
spec:
  podSelector:
    matchLabels:
      key9: value27
      key18: value17
      key30: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value9
          key12: value39
          key37: value28
      podSelector:
        matchLabels:
          key8: value36
          key40: value30
          key18: value46
